# bruce-doc-converter

./: .gitignore  MANIFEST.in  README.en.md  README.md  SKILL.md  pyproject.toml
bruce-doc-converter-skill/: SKILL.md
bruce_doc_converter/: __init__.py  cli.py  converter.py
bruce_doc_converter/md_to_docx/: html-converter.js  mermaid-renderer.js  package-lock.json  package.json  styles.js
docs/superpowers/plans/: 2026-05-05-agent-cli-migration.md
scripts/: convert_document.py
scripts/md_to_docx/: html-converter.js  markdown-converter.js  styles.js
tests/: md_to_docx.test.js  test_cli.py  test_convert_document.py
