[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bruce-doc-converter"
version = "0.1.0"
description = "Agent-facing document converter CLI for Office/PDF/Markdown workflows"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Bruce" }]
dependencies = [
  "python-docx",
  "openpyxl",
  "python-pptx",
  "pdfplumber"
]

[project.scripts]
bdc = "bruce_doc_converter.cli:main"
bruce-doc-converter = "bruce_doc_converter.cli:main"

[tool.setuptools.packages.find]
include = ["bruce_doc_converter*"]

[tool.setuptools.package-data]
bruce_doc_converter = [
  "md_to_docx/*.js",
  "md_to_docx/package.json",
  "md_to_docx/package-lock.json"
]
